Fix Raycast extension issues: update ClientInfo type for safety, fix CHANGELOG grammar, update package.json paths, and include dist folder

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "context7",
-  "title": "Context7 Mcp",
+  "title": "Context7 MCP",
   "description": "Interact with the Context7 MCP in Raycast AI",
   "icon": "context7-icon.png",
   "author": "REAV",
@@ -18,7 +18,7 @@
       "title": "About Context7",
       "description": "Get information about Context7.",
       "mode": "view",
-      "path": "about-context7.js"
+      "path": "about-context7.tsx"
     }
   ],
   "tools": [
